fix: override Bootstrap table color for dark mode, use Unicode emoji in news

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -39,6 +39,10 @@ table {
   }
 }
 
+.table {
+  color: var(--global-text-color);
+}
+
 a,
 table.table a {
   color: var(--global-theme-color);
